k8s/manifests/pg-statefulset-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: series-api-ns
spec:
  serviceName: db  # Must match the headless service name
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: gp3
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: series-api-ns
spec:
  clusterIP: None  # Headless is required for StatefulSet DNS
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
